removing custom bullet points until i can fix it on firefox

--- a/starbowmodweb/site/static/site/css/scss/content.scss
+++ b/starbowmodweb/site/static/site/css/scss/content.scss
@@ -22,7 +22,8 @@
 }
 
 .listing {
-  list-style-image: url("../img/bowred.svg");
+  // list-style-image: url("../img/bowred.svg");
+  list-style: none;
   font-size: 12px;
   margin: 0;
   padding: {
